2009-02-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Pass the
	correct string length to gnet_conn_write after conversion.

2009-02-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Now convert
	user input to terminal encoding.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_add_text): Removed a
	useless buffer, removed logging.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_add_text):
	* src/mud-window.c (mud_window_textview_keypress): Consolidated
	encoding conversion into a single place.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_add_text): All
	gnome-mud messages sent to the terminal are now encoded to the
	encoding of the terminal.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-msp.c (mud_telnet_msp_process_command): Fixed
	formatting.
	* src/mud-window.c (mud_window_textview_keypress): We now convert user
	input from the current locale into the encoding specified in the
	preferences.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_network_event_cb):
	The server disconnecting the user now behaves in the same way as the
	user disconnecting itself.

2009-02-16  Les Harris  <lharris@gnome.org>

	* configure.ac, plugins/Makefile.am: Removed obsolete plugin from
	autofoo.

2009-02-16  Les Harris  <lharris@gnome.org>

	* plugins/python/*: Removed obsolete plugin.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-window.c (mud_window_remove_connection_view): GnomeMud
	picture will now be the correct size when the last view is closed.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send_naws): Will no
	longer try to send NAWS when unconnected.
	* src/mud-window.c (mud_window_size_request): Now properly notifies